--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -1,8 +1,8 @@
 .detail-wrap-sg{
     width: 1200px;
-    margin: auto;
-    padding-bottom: 100px;
-    padding-top: 100px;
+    margin: 50px auto 50px auto;
+    /* padding-bottom: 100px;
+    padding-top: 100px; */
 }
 
 
