--- a/static/css/style-base.css
+++ b/static/css/style-base.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #c6ba93;
+    background-color: #b53e47;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -14,23 +14,9 @@
 .logo {
     margin-left: 20px;
 }
+
 .logo:hover {
     box-shadow: 0 8px 8px 0 rgb(51 48 48 / 20%), 0 -8px 24px 0 rgb(234 224 218 / 30%);
-}
-
-footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    bottom: 0;
-    width: 100%;
-    margin: 0 auto;
-    margin-bottom: 10px;
-}
-
-.body {
-    margin: 0 auto;
 }
 
 a {
