feat - 추천와인 버튼 생성

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -56,6 +56,9 @@
         </form>
     </a>
 </div>
+<div class="sim-wine-recommendation-sg">
+    <a href="{% url 'wines:wine_recommend_view' id=wine.id %}" class="sim-wine-recommendation-btn-sg" onclick="onDisplay()">비슷하고 맛있는 와인 보여줘!</a>
+</div>
 <hr>
     <div class="detail-review-wrap-sg">
 
