--- a/static/css/loading.css
+++ b/static/css/loading.css
@@ -1,6 +1,6 @@
 /* 로딩화면 */
 
-.loading-box-div-sg{
+.loading-liquid-img-sg{
     width: 100%;
     height: 100%;
     position: fixed;
@@ -10,100 +10,55 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: rgba(214, 212, 212, 0.5);
+    background: rgba(243, 241, 241, 0.5);
     backdrop-filter: blur(1.3px);
     -webkit-backdrop-filter: blur(1.3px);
 }
 
-.wrapper{
-    width:200px;
-    height:60px;
-    position: absolute;
-    left:50%;
-    top:50%;
-    transform: translate(-50%, -50%);
-}
-.circle{
-    width:20px;
-    height:20px;
-    position: absolute;
-    border-radius: 50%;
-    background-color: #b53e47;
-    left:15%;
-    transform-origin: 50%;
-    animation: circle .5s alternate infinite ease;
+.loading-liquid-img-box-sg{
+    position: relative;
+    background: #b53e47;
+    border: 0.1rem solid #b53e47;
+    border-radius: 4rem;
+    height: 8rem;
+    overflow: hidden;
+    width: 8rem;
+    outline: 0;
 }
 
-@keyframes circle{
-    0%{
-        top:60px;
-        height:5px;
-        border-radius: 50px 50px 25px 25px;
-        transform: scaleX(1.7);
-    }
-    40%{
-        height:20px;
-        border-radius: 50%;
-        transform: scaleX(1);
-    }
-    100%{
-        top:0%;
-    }
-}
-.circle:nth-child(2){
-    left:45%;
-    animation-delay: .2s;
-}
-.circle:nth-child(3){
-    left:auto;
-    right:15%;
-    animation-delay: .3s;
-}
-.shadow{
-    width:20px;
-    height:4px;
-    border-radius: 50%;
-    background-color: rgba(0,0,0,.5);
-    position: absolute;
-    top:62px;
-    transform-origin: 50%;
-    z-index: -1;
-    left:15%;
-    filter: blur(1px);
-    animation: shadow .5s alternate infinite ease;
+.loading-liquid-img-box-sg::before{
+    content: url(/static/images/st-white.svg);
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-@keyframes shadow{
+.loading-liquid-img-box-sg::after{
+    content: "";
+    position: absolute;
+    bottom: -50%;
+    left: -50%;
+    background: #ffffff;
+    height: 200%;
+    width: 200%;
+    border-radius: 40%;
+    animation: spin 5s ease-in-out infinite;
+
+}
+
+@keyframes spin{
     0%{
-        transform: scaleX(1.5);
-    }
-    40%{
-        transform: scaleX(1);
-        opacity: .7;
+        transform: translateY(-20%) rotate(0deg);
     }
     100%{
-        transform: scaleX(.2);
-        opacity: .4;
+        transform: translateY(-80%) rotate(450deg);
     }
 }
-.shadow:nth-child(4){
-    left: 45%;
-    animation-delay: .2s
-}
-.shadow:nth-child(5){
-    left:auto;
-    right:15%;
-    animation-delay: .3s;
-}
-.wrapper span{
-    position: absolute;
-    top:75px;
-    font-family: 'Lato';
-    font-size: 20px;
-    letter-spacing: 12px;
+
+.loading-text-sg{
+    font-size: 1.5rem;
     color: #b53e47;
-    left:15%;
+    font-weight: 530;
 }
-
-
-
