--- a/templates/base.html
+++ b/templates/base.html
@@ -67,16 +67,9 @@
                 <span>LADDER BUSINESS PLATFORM Copyright © Ladder Corp. All Rights Reserved.</span>
             </div>
     </footer>
-    <div class="loading-box-div-sg" style="display: none;">
-        <div class="wrapper">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="shadow"></div>
-            <div class="shadow"></div>
-            <div class="shadow"></div>
-            <span>LOADING</span>
-        </div>
+    <div class="loading-liquid-img-sg" style="display: none;">
+        <div class="loading-liquid-img-box-sg"></div>
+        <p class="loading-text-sg">LOADING...</p>
     </div>
 
 </body>
