--- a/static/css/style-base.css
+++ b/static/css/style-base.css
@@ -1,10 +1,12 @@
 .base-container {
     /* position: fixed; */
     width: 100%;
+    /* margin: 10px auto; */
     min-height: 65px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+
     background-color: #b53e47;
     background-position: center center;
     background-repeat: no-repeat;
@@ -12,6 +14,7 @@
 }
 
 .logo {
+    color: #fff;
     margin-left: 20px;
 }
 
@@ -27,6 +30,11 @@ a {
 hr {
     margin-top: 20px;
     background: #eee;
+}
+
+.header-signin {
+    color: #fff;
+    margin-right: 20px;
 }
 
 .header-signin:hover {
