--- a/static/css/style-search.css
+++ b/static/css/style-search.css
@@ -17,6 +17,9 @@
     height: 30px;
     font-size: 20px;
 }
+
 .search-btn {
-    margin-right: 50px;
+    /* margin-right: 50px; */
 }
+
+.search-bar {}
