--- a/templates/user/my_wish.html
+++ b/templates/user/my_wish.html
@@ -9,6 +9,16 @@ My WISH
 {% if not user.is_authenticated %}
 
 {% else %}
+<div class="dh-my-nav">
+    <div class="dh-my-nav-box">
+        <div class="dh-my-nav-left">
+            <a href="{% url 'users:get_wish' user.id %}">Wish List</a>
+        </div>
+        <div class="dh-my-nav-right">
+            <a href="{% url 'users:get_review' user.id %}">Review List</a>
+        </div>
+    </div>
+</div>
 <!-- 사용자 리스트 반복문 -->
 <div class="dh-mywish-body">
     <div class="dh-mywish-section">
