feat : 개인 페이지 편의성 기능 추가

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
         function onDisplay() {
-            $('.loading-box-div-sg').show();
+            $('.loading-liquid-img-sg').show();
             document.body.style.overflow = "hidden";
         }
 
@@ -85,11 +85,11 @@
             <div class="footer-content">
                 <span>LADDER BUSINESS PLATFORM Copyright © Ladder Corp. All Rights Reserved.</span>
             </div>
-    </footer>
-    <div class="loading-liquid-img-sg" style="display: none;">
-        <div class="loading-liquid-img-box-sg"></div>
-        <p class="loading-text-sg">LOADING...</p>
-    </div>
+        </footer>
+        <div class="loading-liquid-img-sg" style="display: none;">
+            <div class="loading-liquid-img-box-sg"></div>
+            <p class="loading-text-sg">LOADING...</p>
+        </div>
 
 </body>
 
