enhancement - 메인페이지 상단 이미지 글귀

--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,11 @@
 {% endblock %}
 {% block content %}
 <div class="main">
+    <section class="main-background-img-sg">
+        <div>
+        <h1 class="main-greeting-msg-sg">LIFE IS TOO SHORT <br>TO DRINK BAD WINE</h1>
+    </div>
+    </section>
     <div class="main-section">
         <div class="main-s-box">
             {% for wine in wines %}
