--- a/static/css/style-main.css
+++ b/static/css/style-main.css
@@ -3,6 +3,27 @@
     padding: 0;
 }
 
+.main-background-img-sg{
+    background: url(https://images.ctfassets.net/8x8155mjsjdj/1af9dvSFEPGCzaKvs8XQ5O/a7d4adc8f9573183394ef2853afeb0b6/Copy_of_Red_Wine_Blog_Post_Header.png) fixed;
+    background-position: 100px;
+    height: 400px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    background-size: cover;
+}
+
+.main-background-img-sg div{
+    margin-left: 100px;
+}
+
+.main-greeting-msg-sg{
+    /* position: absolute; */
+    color: #ffffff;
+    font-size: 4rem;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .main-section {
     width: 100%;
     margin: 0 auto 0 auto;
