--- a/static/css/style-my.css
+++ b/static/css/style-my.css
@@ -394,3 +394,18 @@
 .dh-my-nav-menu a:hover {
     box-shadow: 0 8px 8px 0 rgb(51 48 48 / 15%), 0 -8px 24px 0 rgb(234 224 218 / 20%);
 }
+
+.slidein-dh {
+    animation: slidein 3s ease-out forwards;
+    /* margin-bottom: 30px; */
+}
+
+@keyframes slidein {
+    from {
+        margin-top: -20%;
+    }
+
+    to {
+        margin-left: 0%;
+    }
+}
