--- a/static/css/style-sign.css
+++ b/static/css/style-sign.css
@@ -1,4 +1,3 @@
-
 .find {
     color: #ddd;
     font-size: 12px;
@@ -29,7 +28,9 @@
 .signin-wrap {
     min-height: 645px;
 
-}#login_form {
+}
+
+#login_form {
     /* text-align:center; */
     border-radius: 10px;
     padding: 50px;
@@ -39,7 +40,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-left: 15px;
+    /* margin-left: 15px; */
 }
 
 .login {
@@ -72,4 +73,3 @@
 .sign-btn:hover {
     background: #ca296a;
 }
-
