--- a/templates/detail.html
+++ b/templates/detail.html
@@ -7,7 +7,7 @@
 <div class="dh-my-nav">
     <div class="dh-nav-box">
         <div class="dh-my-nav-menu">
-            상세페이지
+            DETAIL PAGE
             <!-- <a href="{% url 'users:get_wish' user.id %}">Wish List</a> -->
         </div>
     </div>
