--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -7,7 +7,7 @@
 <div class="dh-my-nav">
     <div class="dh-nav-box">
         <div class="dh-my-nav-menu">
-            추천페이지
+            RECOMMEND PAGE
             <!-- <a href="{% url 'users:get_wish' user.id %}">Wish List</a> -->
         </div>
     </div>
