--- a/templates/user/my_wish.html
+++ b/templates/user/my_wish.html
@@ -12,10 +12,10 @@ My WISH
 <div class="dh-my-nav">
     <div class="dh-my-nav-box">
         <div class="dh-my-nav-menu">
-            <a href="{% url 'users:get_wish' user.id %}">Wish List</a>
+            <a href="{% url 'users:get_wish' user.id %}">WISH LIST</a>
         </div>
         <div class="dh-my-nav-menu">
-            <a href="{% url 'users:get_review' user.id %}">Review List</a>
+            <a href="{% url 'users:get_review' user.id %}">REVIEW LIST</a>
         </div>
     </div>
 </div>
