fix - 메인페이지 국가 표시

--- a/templates/main.html
+++ b/templates/main.html
@@ -27,7 +27,7 @@
                 <div class="main-s-p-c-bottom">
                     <div class="main-s-p-c-b-producer">{{ wine.producer }}</div>
                     <div class="main-s-p-c-b-name">{{ wine.name }} {{ wine.year }}</div>
-                    <div class="main-s-p-c-b-local">{{ wine.local2 }}, {{ wine.local1 }}</div>
+                    <div class="main-s-p-c-b-local">{{ wine.nation }}, {{ wine.local1 }}</div>
                 </div>
             </a>
             {% endfor %}
