feat : 슬라이스 속도 수정 & 개인페이지 타이틀 수정

--- a/templates/user/my_home.html
+++ b/templates/user/my_home.html
@@ -52,10 +52,10 @@
                 <a href="">개인정보 탈퇴</a>
             </div>
             <div>
-                <a href="{% url 'users:get_wish' user.id %}">Wish List</a>
+                <a href="{% url 'users:get_wish' user.id %}">WISH LIST</a>
             </div>
             <div>
-                <a href="{% url 'users:get_review' user.id %}">Review List</a>
+                <a href="{% url 'users:get_review' user.id %}">REVIEW LIST</a>
             </div>
         </div>
     </div>
